fix: fix z-index of the dropdown options [PT-188162567]

--- a/src/components/dropdown.scss
+++ b/src/components/dropdown.scss
@@ -105,7 +105,7 @@
 
     .day-length-dropdown-options {
       $padding: 4px;
-      z-index: 1;
+      z-index: 100;
       position: absolute;
       background-color: white;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
